# Metalminer

./: CLI_OPTIONS.md  LICENSE  README.md  __init__.py  environment.yml  main.py  pyproject.toml
app/: app.py
examples/: Pa_Am_Cm_Bk_Cf.py
metalminer/: Manual.py  __init__.py  auto_disorder.py  cli.py  constants.py  core.py  ligands.py  main.py  oxidation.py  utils.py  validation.py
metalminer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: smoke_checks.py
