[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metalminer"
version = "0.1.0"
description = "MetalMiner pipeline"
readme = "README.md"
requires-python = "==3.11.14"
license = { text = "MIT" }
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.13.1",
    "requests==2.32.5",
    "py3Dmol==2.5.3",
    "streamlit==1.52.2",
    "rdkit== 2025.09.2",
    "google-generativeai==0.8.5",
]

[tool.setuptools]
packages = ["metalminer"]
